# agentic-design-patterns

./: .gitignore  pyproject.toml
chapters/01_prompt_chaining/: 01_LCEL.ipynb
chapters/02_routing/: 01_langchain_router.ipynb  02_adk_router.ipynb
